--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
-
+      let sum = 0
+      for (let i in nums) {
+        if (nums[i] === 13) {
+          return "I'm too superstitious!"
+        } else if (typeof(nums[i]) === "number") {
+          sum += nums[i]
+        }
+      }
+      return sum
     }
 
     // 👉 CHALLENGE 2
@@ -41,7 +49,14 @@
     // ❗ Notes:
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the characters of the string.
     function stripVowels(str) {
-
+      const vowels = "aeiou"
+      strNew = ""
+      for (i in str) {
+        if (!vowels.includes(str[i])) {
+          strNew = strNew + str[i]
+        }
+      }
+      return strNew
     }
 
     // 👉 CHALLENGE 3
@@ -49,8 +64,18 @@
     // 🧠 Examples of usage:
     // sumNumsWhile([1, 2, 3]) // should return 6
     // sumNumsWhile([1, 2, 13]) // should return "I'm too superstitious!"
-    function sumNumsWhile() {
-
+    function sumNumsWhile(nums) {
+      let i = 0
+      let sum = 0
+      while (i < nums.length) {
+        if (nums[i] === 13) {
+          return "I'm too superstitious!"
+        } else if (typeof (nums[i]) === "number") {
+          sum += nums[i]
+        }
+        i += 1
+      }
+      return sum
     }
 
     // 👉 CHALLENGE 4
@@ -70,8 +95,16 @@
     // 🧠 There are many ways to solve this, but practice using a while loop.
     // 🧠 Work out using pen and paper how the round number and the lifePoints change after each round.
     // 🧠 As long as there are lifePoints, decrease lifePoints by round number, and increase round number by one.
-    function fightMonsters() {
-
+    function fightMonsters(iLifePoints) {
+      let iRound = 1
+      while (iLifePoints > 0) {
+        iLifePoints -= iRound
+        if (iLifePoints <= 0) {
+          return `You died in round ${iRound}`
+        }
+        iRound += 1
+      }
+      return ""
     }
 
     // 👉 CHALLENGE 5
@@ -81,8 +114,14 @@
     // findEvenNums([0, 1, 2, 3, 4]) // should return [0, 2, 4]
     // ❗ Notes:
     // 🧠 Use any kind of loop you'd like and the push method to populate the array of even numbers.
-    function findEvenNums() {
-
+    function findEvenNums(arr) {
+      let returArr = []
+      for (i in arr) {
+        if (arr[i] % 2 === 0) {
+          returArr.push(arr[i])
+        }
+      }
+      return returArr
     }
 
     // 👉 CHALLENGE 6
@@ -92,8 +131,20 @@
     // 🧠 Ages in the subarrays should appear in the same order they appeared in the original array.
     // 🧠 Examples of usage:
     // separateAges([31, 12, 25, 65, 84, 20]) // should return [[12, 20], [31, 25, 65, 84]]
-    function separateAges() {
-
+    function separateAges(ages) {
+      let newArr = []
+      let below21 = []
+      let atleast21 = []
+      for (i in ages) {
+        if (ages[i] < 21) {
+          below21.push(ages[i])
+        } else {
+          atleast21.push(ages[i])
+        }
+      }
+      newArr.push(below21)
+      newArr.push(atleast21)
+      return newArr
     }
 
     // 👉 CHALLENGE 7
@@ -103,8 +154,14 @@
     // 🧠 The "tail" prop contains an array holding the elements of the array after the first one.
     // 🧠 Examples of usage:
     // headAndTail([1, 2, 3]) // should return { head: 1, tail: [2, 3] }
-    function headAndTail() {
-
+    function headAndTail(arr) {
+      let returnObj = {}
+      returnObj.head = arr[0]
+      returnObj.tail = []
+      for (i = 1; i < arr.length; i += 1) {
+        returnObj.tail.push(arr[i])
+      }
+      return returnObj
     }
 
     // 👉 CHALLENGE 8
@@ -114,10 +171,30 @@
     // nestedLoops(['hello', 'goodbye']) // should return ['hEllO', 'gOOdbyE']
     // ❗ Notes:
     // 🧠 To capitalize a string you can use its toUpperCase method: "a".toUpperCase() returns "A"
-    function nestedLoops() {
-
+    function nestedLoops(arr) {
+      const vowels = ("aeiou")
+      let newArr = []
+      for (i = 0; i < arr.length; i += 1) {
+        str = arr[i]
+        newStr = ""
+        strCharsArr = str.split("")
+        for (char in strCharsArr) { 
+          if (vowels.includes(strCharsArr[char])) {
+            newStr = newStr + strCharsArr[char].toUpperCase()
+          } else {
+            newStr = newStr + strCharsArr[char]
+          }
+        }
+        newArr.push(newStr)
+      }
+      return newArr
+      // for (i = 0; i < arrLetters.length; i += 1) {
+      //   if (vowels.includes(arr[i])) {
+      //     newArr.push(arr[i].toUpperCase)
+      //   }
+      // }
+      return newArr
     }
-
     // 👉 CHALLENGE 9
     // 🧠 The function crazyTrimmer takes an array as its argument.
     // 🧠 If the array has an even number of elements, the function returns it minus its last element.
@@ -129,7 +206,14 @@
     // 🧠 Practice using pop and slice.
     // 🧠 Note that pop modifies the original array in place and returns the "popped" element, whereas slice gives us a brand new array.
     function crazyTrimmer(arr) {
-
+      let newArr = arr
+      if (arr.length % 2 === 0) {
+        newArr.pop()        
+      } else {
+        newArr.pop()
+        newArr = newArr.slice(1)
+      }
+      return newArr
     }
 
     // 🧪 TESTS, do not work below this line
